Change Log

v3.7.9 SCL 20150515
- fix bug in u2a() when digits=0
- added CHARGE_LIMIT - charge to a certain kWh and then go to sleep
	
SCL 20150513
- cleanup, move SERIALCLI to serialcli.cpp/h

v3.7.8 SCL 20150512
* promoted to official release
- Special thanks to CraigK for his hard work in making this release possible,
  with his numerous enhancements, and invaluable testing.

vD3.7.8 SCL 20150511-12
* RELEASE CANDIDATE 3 *
- added RAPI SM,GM to set/get voltmeter
- EEPROM settings for voltmeter scale/offset
- RAPI $GG now returns voltage as well
- read voltmeter in J1772EVSEController::Update() instead of on demand
	(added GetVoltage())
	
vD3.7.7 SCL 20150511
* RELEASE CANDIDATE 2 *
- added RAPI SK,GP,GU commands
- added RAPI XOR checksum and no checksum support (kudos to AndreE for
	suggesting XOR checksum support)

vD3.7.6 SCL 20150510
* RELEASE CANDIDATE 1 *
- added u2a()
- code size reduction of DELAYTIMER_MENU and TEMPERATURE_MONITORING
  -> now, RAPI, DELAYTIMER_MENU, and TEMPERATURE_MONITORING can all be enabled simultaneously
- remove floats from Adafruit libraries (CraigK remove float from open_evse.ino)
- merge CraigK PR#34,35
- added more amp selections to L2 (CraigK)
- change RTC year range from 12-20 -> 15->25
- change RTC/DelayTimer menu behavior - keep leading + when adjusting a value

Much gratitude to CraigK for his many contributions to coding and testing, including,
but not limited to temperature monitoring and kWh logging
	
vD3.7.5 SCL 20150506
- code cleanup
- remove sscanf() - save 2K (thanks to AndreE for the heads up)
- merge CraigK PR#33
- roll back version from .8 -> .5
- change DelayTimer::CheckTime() delay from 1m to 1s
- get rid of FlexiTimer2
	
	
vD3.7.4 SCL 20150429
- enable SAMPLE_ACPINS by default
	
vD3.7.3 SCL 20150429
- no substantial changes.. mainly reorganizing of the code to use the libraries
	in place -> no more copying to Arduino libraries folder
- shorten short button press from 100ms -> 50ms
	
vD3.7.2 SCL 20150428